--- a/package.json
+++ b/package.json
@@ -1,5 +1,35 @@
 {
+  "name": "bandhuconnectplus",
+  "version": "1.0.0",
+  "main": "index.ts",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2"
-  }
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@supabase/supabase-js": "^2.47.10",
+    "expo": "~53.0.22",
+    "expo-camera": "~16.0.8",
+    "expo-constants": "~17.0.3",
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.4",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.6",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
+  },
+  "private": true
 }
