--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^7.4.6",
@@ -19,8 +19,11 @@
     "expo": "~53.0.22",
     "expo-camera": "~16.0.8",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.2.4",
+    "expo-device": "~7.1.4",
     "expo-image-picker": "~16.0.3",
     "expo-location": "~18.0.4",
+    "expo-notifications": "~0.31.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
