--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "^2.4.10",
-    "@react-navigation/bottom-tabs": "^7.4.6",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.25",
+    "@react-native-picker/picker": "2.8.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@supabase/supabase-js": "^2.47.10",
     "expo": "~53.0.22",
-    "expo-camera": "~16.0.8",
-    "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.2.4",
+    "expo-constants": "~17.1.7",
     "expo-device": "~7.1.4",
-    "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.4",
-    "expo-notifications": "~0.31.4",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~18.1.6",
+    "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "~12.0.3",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.15.4",
+    "react-native": "0.79.5",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
