--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bandhuconnectplus",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "2.8.1",
+    "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -27,6 +27,7 @@
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0"
