--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-picker/picker": "^2.8.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -21,19 +21,20 @@
     "expo": "~53.0.22",
     "expo-constants": "~17.1.7",
     "expo-device": "~7.1.4",
-    "expo-image-picker": "~15.0.7",
+    "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
     "expo-secure-store": "~14.2.4",
     "expo-status-bar": "~2.2.3",
-    "expo-task-manager": "~12.0.3",
+    "expo-task-manager": "~13.1.6",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "^13.16.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
