--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/uuid": "^10.0.0",
     "expo": "~53.0.22",
     "expo-constants": "~17.1.7",
+    "expo-dev-client": "^5.2.4",
     "expo-device": "~7.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
