--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "supabase": "^2.39.2",
     "typescript": "~5.8.3"
   },
   "private": true
