--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "bandhuconnectplus",
-  "version": "1.0.0",
+  "version": "2.2.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
