--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~17.1.7",
     "expo-dev-client": "^5.2.4",
     "expo-device": "~7.1.4",
+    "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
     "expo-location": "~18.1.6",
     "expo-secure-store": "~14.2.4",
@@ -34,7 +35,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.13.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
